--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-alert": "^7.0.2",
     "react-dom": "^16.13.1",
     "react-json-editor-ajrm": "^2.5.13",
+    "react-loading-skeleton": "^2.1.1",
     "react-scripts": "3.4.3",
+    "react-skeleton-loader": "^1.0.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0",
     "valid-url": "^1.0.9"
