--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.6.6",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-json-editor-ajrm": "^2.5.13",
     "react-loading-skeleton": "^2.1.1",
     "react-scripts": "3.4.3",
     "react-skeleton-loader": "^1.0.4",
+    "react-transition-group": "^4.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0",
     "valid-url": "^1.0.9"
