response component build completed

--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.6.6",
+    "json-diff": "^0.5.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-alert": "^7.0.2",
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-json-editor-ajrm": "^2.5.13",
+    "react-json-view": "^1.19.1",
+    "react-loader-spinner": "^3.1.14",
     "react-loading-skeleton": "^2.1.1",
     "react-scripts": "3.4.3",
     "react-skeleton-loader": "^1.0.4",
