--- a/package.json
+++ b/package.json
@@ -1,51 +1,43 @@
 {
-  "name": "postman",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.6.6",
-    "json-diff": "^0.5.4",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-alert": "^7.0.2",
-    "react-alert-template-basic": "^1.0.0",
-    "react-dom": "^16.13.1",
-    "react-json-editor-ajrm": "^2.5.13",
-    "react-json-view": "^1.19.1",
-    "react-loader-spinner": "^3.1.14",
-    "react-loading-skeleton": "^2.1.1",
-    "react-scripts": "3.4.3",
-    "react-skeleton-loader": "^1.0.4",
-    "react-transition-group": "^4.4.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.0",
-    "valid-url": "^1.0.9"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "postman",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.32",
+		"@fortawesome/free-solid-svg-icons": "^5.15.1",
+		"@fortawesome/react-fontawesome": "^0.1.11",
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.5.0",
+		"@testing-library/user-event": "^7.2.1",
+		"antd": "^4.6.6",
+		"json-diff": "^0.5.4",
+		"prop-types": "^15.7.2",
+		"react": "^16.13.1",
+		"react-alert": "^7.0.2",
+		"react-alert-template-basic": "^1.0.0",
+		"react-dom": "^16.13.1",
+		"react-json-editor-ajrm": "^2.5.13",
+		"react-json-view": "^1.19.1",
+		"react-loader-spinner": "^3.1.14",
+		"react-loading-skeleton": "^2.1.1",
+		"react-scripts": "3.4.3",
+		"react-skeleton-loader": "^1.0.4",
+		"react-transition-group": "^4.4.1",
+		"semantic-ui-css": "^2.4.1",
+		"semantic-ui-react": "^2.0.0",
+		"valid-url": "^1.0.9"
+	},
+	"scripts": {
+		"start": "node server.js",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+	}
 }
