--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react-json-view": "^1.19.1",
 		"react-loader-spinner": "^3.1.14",
 		"react-loading-skeleton": "^2.1.1",
+		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
 		"react-skeleton-loader": "^1.0.4",
 		"react-transition-group": "^4.4.1",
@@ -37,7 +38,15 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
