--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"antd": "^4.6.6",
+		"axios": "^0.21.0",
 		"json-diff": "^0.5.4",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
