--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
 		"@testing-library/user-event": "^7.2.1",
 		"antd": "^4.6.6",
 		"axios": "^0.21.0",
+		"express": "^4.17.1",
+		"express-favicon": "^2.0.1",
 		"json-diff": "^0.5.4",
+		"path": "^0.12.7",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-alert": "^7.0.2",
