--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"valid-url": "^1.0.9"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "node server.js",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
